fix: depguard linter disabled

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -28,7 +28,7 @@
     disable-all: true
     enable:
       - bodyclose
-      - depguard
+      # - depguard
       - dogsled
       - dupl
       - errcheck
